figuring out ticks and durations

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="bg-dark">
     <header>
         <h1 class="text-light">Intervals Since
-            <small class="text-muted">What Happened Since You Left</small>
+            <small class="text-muted">&ndash; What Happened Since You Left</small>
         </h1>
     </header>
 
