beginnings of profession structure

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 
     </main>
     <script src="./assets/js/luxon.min.js"></script>
+    <script src="./assets/js/config.js"></script>
+    <script src="./assets/js/class/Profession.js"></script>
+    <script src="./assets/js/class/Villager.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
