--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     </main>
     <script src="./assets/js/luxon.min.js"></script>
+    <script src="./assets/js/Ticker.js"></script>
     <script src="./assets/js/Villager.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
